fix: start bloop with jvm version from using directives for JVMs > 17